added lowest and highest functional, search hotels by high_to_low, modified value entry

--- a/telegram_bot/bot.ini
+++ b/telegram_bot/bot.ini
@@ -3,7 +3,7 @@ token = 6252281806:AAEtNeUIAqHLiU-8b6cSI4CRfY1WGYAAmzw
 admin_id = 1889892706
 
 [db]
-user = kalibri
-password = feeteex01
+user = root
+password = root
 database = skillbox
 host = localhost
